src/objects/OrderApi__Custom_Payment_Type_Template__mdt.object
<CustomObject>
    <description>Configurations for custom payment types available for stores.</description>
    <fields>
        <fullName>OrderApi__Apex_Class__c</fullName>
        <description>Apex Class to drive multiple display features of custom payment types.</description>
        <inlineHelpText>Apex Class to drive multiple display features of custom payment types.</inlineHelpText>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Auto_Post_Sales_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Sales Orders will be posted prior to receiving payment. Usually occurs when payments take several days to process. When unchecked Sales Orders will post once payments are received.</description>
        <inlineHelpText>When checked, Sales Orders will be posted prior to receiving payment. Usually occurs when payments take several days to process. When unchecked Sales Orders will post once payments are received.</inlineHelpText>
        <label>Auto Post Sales Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Available_for_Recurring_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, payment methods will be available for recurring payments.</description>
        <inlineHelpText>When checked, payment methods will be available for recurring payments.</inlineHelpText>
        <label>Available for Recurring Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the metadata record is enabled or not.</description>
        <inlineHelpText>Whether the metadata record is enabled or not.</inlineHelpText>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Lightning_Component_for_Checkout__c</fullName>
        <description>Defines the lightning component to be used in checkout pages.</description>
        <inlineHelpText>Defines the lightning component to be used in checkout pages.</inlineHelpText>
        <label>Lightning Component for Checkout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Lightning_Component_for_Payment_Method__c</fullName>
        <description>Defines the lightning component to be used in the Payment Method page for the front and backend.</description>
        <inlineHelpText>Defines the lightning component to be used in the Payment Method page for the front and backend.</inlineHelpText>
        <label>Lightning Component for Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Payment Type Template</label>
    <pluralLabel>Custom Payment Type Templates</pluralLabel>
</CustomObject>